2001-07-19  Fatih Demir <kabalak@gtranslator.org>

	* extra-po/gwvedit: Added gwvedit pot file to GNOME CVS.

2001-06-11	Michael Twomey <michael.twomey@ireland.sun.com>

	* l10n-style-guides/zh_CN/L10NSTYGDZH.pdf: Added Simplified Chinese
	style guide.
	* l10n-style-guides/zh_TW/L10NSTYGDZHTW.pdf: Added Traditional
	Chinese style guide.
	* l10n-style-guides/ko/L10NSTYGDKO.pdg: Added Korean style guide.

2001-05-11  Fatih Demir <kabalak@gtranslator.org>

	* extra-po/gtkdial: Added gtkdial po(t)-files also to GNOME CVS.
	
2001-02-27  Michael Twomey <michael.twomey@ireland.sun.com>

	* l10n-style-guides: added containing the source and 
	output of Sun's localisation style guides. These will probably have
	to be rewritten into docbook but they provide a good start.

2001-02-16  Fatih Demir	<kabalak@gtranslator.org>

	* extra-po/helix-gdm2 & extra-po/gdm2beta5: Removed these
		directories from here -- the original gdm2 CVS module
		 is now the main source for gdm2 -- the old translations
		  are conserved in a tarball and available on gtranslator.org.

2001-02-11  Fatih Demir	<kabalak@gtranslator.org>

	* ./tr: Removed

2000-12-17  Marius Andreiana  <mandreiana@yahoo.com>

	* ro/ : added
	
2000-11-11  Gediminas Paulauskas  <menesis@delfi.lt>

	* update.pl, ui-extract.pl: updated scripts from gnumeric,
	were outdated.
	
2000-10-23  Robert Brady  <robert@suse.co.uk>

	* UTF-8/potoutf.sh: outputs text/plain; charset=UTF-8 
	instead of text/plain; UTF-8.

	Oops.

2000-08-05  Robert Brady  <rwb197@zepler.org>

	* UTF-8/potoutf.sh: Script to convert a .po
  	  file from it's marked encoding encoding to UTF-8.
	  
	* UTF-8/utftopo.sh: Script to convert a .po
  	  file to an apporpriate encoding.
	  
	* UTF-8/README: Readme about the scripts.

2000-08-05  Fatih Demir	<kabalak@gmx.net>

	* extra-po/gnucash: Added the Gnucash module.
		[ enough for now, no additional modules
			are planned .. :) ]

2000-07-30  Fatih Demir	<kabalak@gmx.net>
