@@ -1,4 +1,4 @@
-bg_BG.cp1251,612
+bg,612
 ca,9988
 cs,10637
 da,22110
