@@ -1,61 +1,61 @@
-bg_BG.cp1251,achtung/po,,,
-bg_BG.cp1251,balsa/po,,,
-bg_BG.cp1251,bonobo/po,,,
-bg_BG.cp1251,bug-buddy/po,,,
-bg_BG.cp1251,control-center/po,,,
-bg_BG.cp1251,dia/po,,,
-bg_BG.cp1251,dr-genius/po,,,
-bg_BG.cp1251,eog/po,,,
-bg_BG.cp1251,evolution/po,,,
-bg_BG.cp1251,gconf/po,,,
-bg_BG.cp1251,gdm2/po,,,
-bg_BG.cp1251,gnome-i18n/extra-po/gdm2beta5,,,
-bg_BG.cp1251,gedit/po,,,
-bg_BG.cp1251,gfloppy/po,,,
-bg_BG.cp1251,ggv/po,,,
-bg_BG.cp1251,ghex/po,,,
-bg_BG.cp1251,gimp/po,,,
-bg_BG.cp1251,gimp/po-libgimp,,,
-bg_BG.cp1251,gimp/po-script-fu,,,
-bg_BG.cp1251,gimp/po-plug-ins,,,
-bg_BG.cp1251,gimp-freetype/po,,,
-bg_BG.cp1251,glade/po,,,
-bg_BG.cp1251,gnome-i18n/extra-po/gnapster,,,
-bg_BG.cp1251,gnome-applets/po,,,
-bg_BG.cp1251,gnome-chess/po,,,
-bg_BG.cp1251,gnome-core/po,612,33,107
-bg_BG.cp1251,gnome-db/po,,,
-bg_BG.cp1251,gnome-games/po,,,
-bg_BG.cp1251,gnome-libs/po,,,
-bg_BG.cp1251,gnome-lokkit/po,,,
-bg_BG.cp1251,gnome-media/po,,,
-bg_BG.cp1251,gnome-pilot/po,,,
-bg_BG.cp1251,gnome-pim/po,,,
-bg_BG.cp1251,gnome-print/po,,,
-bg_BG.cp1251,gnome-utils/po,,,
-bg_BG.cp1251,gnome-vfs/po,,,
-bg_BG.cp1251,gnomeicu/po,,,
-bg_BG.cp1251,gnorpm/po,,,
-bg_BG.cp1251,gnumeric/po,,,
-bg_BG.cp1251,gphoto/po,,,
-bg_BG.cp1251,gtk+/po,,,
-bg_BG.cp1251,gnome-i18n/extra-po/gtm,,,
-bg_BG.cp1251,gtop/po,,,
-bg_BG.cp1251,gtranslator/po,,,
-bg_BG.cp1251,guppi3/po,,,
-bg_BG.cp1251,gxsnmp/po,,,
-bg_BG.cp1251,gnome-i18n/extra-po/helix-gdm2,,,
-bg_BG.cp1251,helix-install/src/rpm-3.0.3/po,,,
-bg_BG.cp1251,libgtop/po,,,
-bg_BG.cp1251,magicdev/po,,,
-bg_BG.cp1251,mc/po,,,
-bg_BG.cp1251,memprof/po,,,
-bg_BG.cp1251,nautilus/po,,,
-bg_BG.cp1251,pan/po,,,
-bg_BG.cp1251,rp3/po,,,
-bg_BG.cp1251,sodipodi/po,,,
-bg_BG.cp1251,gnome-i18n/extra-po/sawfish,,,
-bg_BG.cp1251,gnome-i18n/extra-po/xchat,,,
+bg,achtung/po,,,
+bg,balsa/po,,,
+bg,bonobo/po,,,
+bg,bug-buddy/po,,,
+bg,control-center/po,,,
+bg,dia/po,,,
+bg,dr-genius/po,,,
+bg,eog/po,,,
+bg,evolution/po,,,
+bg,gconf/po,,,
+bg,gdm2/po,,,
+bg,gnome-i18n/extra-po/gdm2beta5,,,
+bg,gedit/po,,,
+bg,gfloppy/po,,,
+bg,ggv/po,,,
+bg,ghex/po,,,
+bg,gimp/po,,,
+bg,gimp/po-libgimp,,,
+bg,gimp/po-script-fu,,,
+bg,gimp/po-plug-ins,,,
+bg,gimp-freetype/po,,,
+bg,glade/po,,,
+bg,gnome-i18n/extra-po/gnapster,,,
+bg,gnome-applets/po,,,
+bg,gnome-chess/po,,,
+bg,gnome-core/po,612,33,107
+bg,gnome-db/po,,,
+bg,gnome-games/po,,,
+bg,gnome-libs/po,,,
+bg,gnome-lokkit/po,,,
+bg,gnome-media/po,,,
+bg,gnome-pilot/po,,,
+bg,gnome-pim/po,,,
+bg,gnome-print/po,,,
+bg,gnome-utils/po,,,
+bg,gnome-vfs/po,,,
+bg,gnomeicu/po,,,
+bg,gnorpm/po,,,
+bg,gnumeric/po,,,
+bg,gphoto/po,,,
+bg,gtk+/po,,,
+bg,gnome-i18n/extra-po/gtm,,,
+bg,gtop/po,,,
+bg,gtranslator/po,,,
+bg,guppi3/po,,,
+bg,gxsnmp/po,,,
+bg,gnome-i18n/extra-po/helix-gdm2,,,
+bg,helix-install/src/rpm-3.0.3/po,,,
+bg,libgtop/po,,,
+bg,magicdev/po,,,
+bg,mc/po,,,
+bg,memprof/po,,,
+bg,nautilus/po,,,
+bg,pan/po,,,
+bg,rp3/po,,,
+bg,sodipodi/po,,,
+bg,gnome-i18n/extra-po/sawfish,,,
+bg,gnome-i18n/extra-po/xchat,,,
 ca,achtung/po,78,18,27
 ca,balsa/po,312,32,29
 ca,bonobo/po,,,
