@@ -1,3 +1,11 @@
+2001-07-29  Yanko Kaneti <yaneti@declera.com>
+
+	* genreport-april.pl:
+	* genreport-new.pl:
+	* ru/langinfo.dat:
+	* ru/langmod.dat:
+	* ru/status.pl:s/bg_BG(\.cp1251)*/bg/
+
 2001-07-19  Fatih Demir <kabalak@gtranslator.org>
 
 	* extra-po/gwvedit: Added gwvedit pot file to GNOME CVS.
